# RichPresenceDaemon

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  CustomListener.cpp  CustomListener.h  CustomTray.cpp  CustomTray.h  MediaObject.cpp  MediaObject.h  README.md  RichPresenceManager.cpp  RichPresenceManager.h  WSServer.cpp  WSServer.h  discord_impl.cpp  main.cpp
lib/discord_social_sdk/: README.md
tests/: Music.ps1
